--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "gmap-vue": "^1.4.0",
+    "node-sass": "^4.14.1",
     "vue": "^2.6.11",
     "vue-axios": "^2.1.5"
   },
