--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "core-js": "^3.6.5",
     "gmap-vue": "^1.4.0",
     "node-sass": "^4.14.1",
-    "vue": "^2.6.11",
-    "vue-axios": "^2.1.5"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
