--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "deploy": "gh-pages -d dist",
     "test:unit": "cross-env NODE_ENV=test jest"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn lint && yarn test:unit"
+    }
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.30",
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
@@ -36,6 +41,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "gh-pages": "^3.1.0",
+    "husky": "^4.3.0",
     "jest": "^26.5.2",
     "jest-transform-stub": "^2.0.0",
     "sass": "^1.26.12",
