--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.1.0",
+    "axios-mock-adapter": "^1.18.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.5.2",
     "cross-env": "^7.0.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "flush-promises": "^1.0.2",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.0",
     "jest": "^26.5.2",
