--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,19 +33,19 @@ jobs:
             **/node_modules
           key: ${{ runner.os }}-${{ hashFiles('**/package-lock.json') }}
 
-      - name: Install dependencies
+      - name: Install dependencies 🔧
         run: npm install
 
-      - name: Lint
+      - name: Lint 🧐
         run: npm run lint
 
-      - name: Test
+      - name: Test 🚨
         run: npm run test:unit
 
-      - name: Build
+      - name: Build  🏗️
         run: npm run build
 
-      - name: Deploy
+      - name: Deploy 🚀
         run: |
           git config --global user.name $user_name
           git config --global user.email $user_email
