--- a/package.json
+++ b/package.json
@@ -19,15 +19,21 @@
     "core-js": "^3.6.5",
     "gmap-vue": "^1.4.0",
     "node-sass": "^4.14.1",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "@testing-library/vue": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-typescript": "^4.5.11",
     "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "@vue/test-utils": "^1.1.0",
     "axios-mock-adapter": "^1.18.2",
     "babel-core": "^7.0.0-bridge.0",
@@ -42,6 +48,7 @@
     "jest-transform-stub": "^2.0.0",
     "sass": "^1.26.12",
     "sass-loader": "^10.0.2",
+    "typescript": "^4.1.3",
     "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.11"
   },
@@ -52,10 +59,11 @@
     },
     "extends": [
       "plugin:vue/essential",
-      "eslint:recommended"
+      "eslint:recommended",
+      "@vue/typescript/recommended"
     ],
     "parserOptions": {
-      "parser": "babel-eslint"
+      "parser": "@typescript-eslint/parser"
     },
     "rules": {}
   },
